[metadata]
name = vitmem
version = 1.0.0
author = Brain Priority Lab
author_email = mail@brainpriority.com
description = A package for estimating image memorability
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brainpriority/vitmem
project_urls =
    Bug Tracker = https://github.com/brainpriority/vitmem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src